2004-09-17  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* sock3.adb, sock3.out, sock3_proc.adb, sock3_sec.adb, sock3_sec.out,
	  makefile:
	New regression tests pair, plain and secure.

	* ssock2.adb:
	Do not call Get_Free_Port. It is calling inside of Sock2_Proc.

2004-09-16  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* sock1.adb:
	Use Exception_Information for more information in case of regression.

2004-09-15  Pascal Obry  <pascal@obry.org>

	* upload.out:
	Update upload file number due to attachment test.

	* attachment.adb, attachment.out, attachment1.txt, attachment2.txt:
	Initial revision. Test the HTTP messages with attachments support.

	* makefile:
	(RT_STD): Add attachment test.

2004-09-15  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* makefile:
	Remove -lpoll linker option for Win32.

2004-09-09  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* wait_pack.adb:
	Use new Socket_Index, Socket_Count types.

	* afile_pack.ads:
	Remove DOS CR at end of line.

	* makefile:
	Remove google_search_service* at clean.

2004-09-08  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* wait_pack.adb:
	(Run): Could_Read/Write call changed to Is_Read/Write_Ready.

2004-09-07  Pascal Obry  <pascal@obry.org>

	* makefile:
	(RT_SOAP_ASIS): Add wsdl_8.

	* wsdl_8_main.adb, wsdl_8.ads, wsdl_8.adb, wsdl_8.out:
	Initial revision.

2004-09-07  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* wait_pack.ads, wait_pack.adb, wait2.adb, wait2.out, wait2_sec.adb,
	  wait2_sec.out, makefile:
	New regression test.

	* wait_pack.adb:
	(Client_Task): Do not operate under empty set.

2004-09-06  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* dispatch.adb, dispatch_method.adb, dispatch_vh.adb, dispatch_vh.out,
	  sock2_proc.adb, tcom.adb:
	Use Get_Free_Port.

	* sockext_proc.adb:
	Fix comment.

2004-08-25  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* disp_soap_proc.adb, file2.adb, sessions.adb, sessions2.adb,
	  sessions3.adb, sessions4.adb:
	Close client connection after use.
